# computa

./: .gitignore  Computa.bat  Computa.command  README.md  computa.sh  pyproject.toml  requirements.txt
computa/: __init__.py  __main__.py  bigfiles.py  cleanup.py  cli.py  history.py  programs.py  recommend.py  report.py  serialize.py  startup.py  system.py  util.py  walk.py
scripts/: install.ps1  install.sh
tests/: test_bigfiles.py  test_breakdown.py  test_cleanup.py  test_deep.py  test_history.py  test_recommend.py  test_serialize.py  test_startup.py  test_toggle.py  test_walk.py
windows-toolkit/: .gitignore  Open-Admin-Here.bat  README.md  Run-Toolkit.bat  app-uninstall.ps1  bloatware-audit.ps1  cleanup.ps1  diagnose.ps1  disk-map.ps1  event-errors.ps1  files.txt  find-clutter.ps1  health-report.ps1  menu.ps1  network-reset.ps1  optimize-drives.ps1  power-plan.ps1  profile-bloat.ps1  programs-audit.ps1  restore-point.ps1  safe-sweep.ps1  services-audit.ps1  startup-audit.ps1  system-repair.ps1  update.ps1  upgrade-advisor.ps1
windows-toolkit/lib/: Common.ps1
